argocd/kustomize/vanilla/.base/argo-cd/argo-cd-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-cd-service
spec:
  ports:
  - name: argo-cd-app
    port: 80
